--- a/hdi/hdi_warehouse_diagram/views/warehouse_shelves_views.xml
+++ b/hdi/hdi_warehouse_diagram/views/warehouse_shelves_views.xml
@@ -56,26 +56,26 @@
                         
                         <separator string="Bins"/>
                         <field name="bin_ids">
-                            <tree>
+                            <list>
                                 <field name="name"/>
                                 <field name="level"/>
                                 <field name="column"/>
                                 <field name="row"/>
                                 <field name="status"/>
                                 <field name="bin_type"/>
-                            </tree>
+                            </list>
                         </field>
                     </sheet>
                 </form>
             </field>
         </record>
 
-        <!-- Warehouse Shelves - Tree View -->
-        <record id="warehouse_shelves_tree" model="ir.ui.view">
-            <field name="name">warehouse.shelves.tree</field>
+        <!-- Warehouse Shelves - List View -->
+        <record id="warehouse_shelves_list" model="ir.ui.view">
+            <field name="name">warehouse.shelves.list</field>
             <field name="model">warehouse.shelves</field>
             <field name="arch" type="xml">
-                <tree string="Warehouse Shelves">
+                <list string="Warehouse Shelves">
                     <field name="name"/>
                     <field name="view_id"/>
                     <field name="shelf_type"/>
@@ -84,7 +84,7 @@
                     <field name="levels"/>
                     <field name="bin_count"/>
                     <field name="active"/>
-                </tree>
+                </list>
             </field>
         </record>
 
@@ -92,7 +92,7 @@
         <record id="warehouse_shelves_action" model="ir.actions.act_window">
             <field name="name">Warehouse Shelves</field>
             <field name="res_model">warehouse.shelves</field>
-            <field name="view_mode">tree,form</field>
+            <field name="view_mode">list,form</field>
             <field name="context">{"search_default_view_id": context.get('default_view_id', False)}</field>
         </record>
 
