--- a/hdi/hdi_warehouse_diagram/views/warehouse_view_views.xml
+++ b/hdi/hdi_warehouse_diagram/views/warehouse_view_views.xml
@@ -26,23 +26,17 @@
                         <field name="description" placeholder="Mô tả chi tiết về sơ đồ kho..." nolabel="1"/>
                         <notebook>
                             <page string="Shelves" name="shelves">
-                                <field name="shelves_ids" nolabel="1">
-                                    <tree string="Shelves" editable="bottom">
+                                <field name="shelves_ids" nolabel="1" readonly="1">
+                                    <list>
                                         <field name="name"/>
-                                        <field name="shelf_type"/>
-                                        <field name="rows"/>
-                                        <field name="columns"/>
-                                        <field name="levels"/>
-                                    </tree>
+                                    </list>
                                 </field>
                             </page>
                             <page string="Areas" name="areas">
-                                <field name="area_ids" nolabel="1">
-                                    <tree string="Areas" editable="bottom">
+                                <field name="area_ids" nolabel="1" readonly="1">
+                                    <list>
                                         <field name="name"/>
-                                        <field name="area_type"/>
-                                        <field name="is_dangerous"/>
-                                    </tree>
+                                    </list>
                                 </field>
                             </page>
                         </notebook>
@@ -51,19 +45,19 @@
             </field>
         </record>
 
-        <!-- Warehouse View - Tree View -->
-        <record id="warehouse_view_tree" model="ir.ui.view">
-            <field name="name">warehouse.view.tree</field>
+        <!-- Warehouse View - List View -->
+        <record id="warehouse_view_list" model="ir.ui.view">
+            <field name="name">warehouse.view.list</field>
             <field name="model">warehouse.view</field>
             <field name="arch" type="xml">
-                <tree string="Warehouse Diagram Views">
+                <list string="Warehouse Diagram Views">
                     <field name="name"/>
                     <field name="warehouse_id"/>
                     <field name="width"/>
                     <field name="height"/>
                     <field name="scale"/>
                     <field name="active"/>
-                </tree>
+                </list>
             </field>
         </record>
 
@@ -71,7 +65,7 @@
         <record id="warehouse_view_action" model="ir.actions.act_window">
             <field name="name">Warehouse Diagram Views</field>
             <field name="res_model">warehouse.view</field>
-            <field name="view_mode">tree,form</field>
+            <field name="view_mode">list,form</field>
             <field name="help" type="html">
                 <p class="o_view_nocontent_smiling_face">
                     Create a new warehouse diagram view
